# battui

./: CLAUDE.md  Cargo.toml  README.md
src/: app.rs  battery.rs  main.rs  ui.rs
